# RAG-CHAT

./: .env.dist  .gitignore  README.md  pyproject.toml
conf/: index_conf.yaml  inference_conf.yaml
data/mongo/: client.py
frontend/: index.html
notebooks/: check_embeddings.ipynb  check_gen_evaluation.ipynb  clean_data.ipynb  evaluation.ipynb  evalutation.ipynb  first_tests.ipynb  pipeline_tests.ipynb
rag-chat/: bot.py
rag_chat/: _openai.py  api.py  chat.py  log.py  main.py  openai.py  repl.py  test.py  utils.py
rag_chat/agent/: _react_langchain.py  chat.py  condense.py  condense_context.py  config.py  react.py
rag_chat/data/: build_rag.py  config.py  store.py
rag_chat/data/mongo/: __init__.py  doc_store.py  reader.py  upload.py
rag_chat/data/qdrant/: vector_store.py
rag_chat/evaluation/: config.py  dataset.py  eval.py
rag_chat/evaluation/metrics/: __init__.py  hit_rate.py  mrr.py  recall.py
rag_chat/query/: config.py  query.py
rag_chat/storage/: config.py  load.py  storage.py
rag_chat/storage/mongo/: __init__.py  _upload.py  client.py  doc_store.py  reader.py
rag_chat/storage/qdrant/: access.py  vector_store.py
tests/: node_understanding.txt  test_version.py
