[tool.poetry]
name = "rag-chat"
version = "0.1.0"
description = ""
authors = ["Alex Bru <brubuxo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.346"
pymongo = {version = "3.6", extras = ["srv"]}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
